Bug 83859 - UI Name box selection does not support arrow keys on Linux
Summary: UI Name box selection does not support arrow keys on Linux
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-09-14 21:13 UTC by B.J. Herbison
Modified: 2016-10-25 19:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description B.J. Herbison 2014-09-14 21:13:04 UTC
Steps to reproduce:
* Create or open a spreadsheet with several defined names.
* Click on the arrow key to the right of the Name Box.
* Types some letters to position the name list.
* Press an up or down arrow on the keyboard.

Expected result:
* The up/down arrow key should move the selection up/down one selection.

Actual result:
* With Windows 7 the behavior is as expected.
* With Ubuntu the arrow keys have no effect.

I believe this is a regression, but I'm not positive.
Comment 1 Cor Nouws 2014-09-15 19:13:05 UTC
Hi BJ

Thanks for the issue - I can confirm the behaviour on Ubuntu.
Do you have any idea if this worked in one of the previous versions ?

Cheers,
Cor
Comment 2 B.J. Herbison 2014-09-15 23:35:27 UTC
I believe this is a regression as my fingers are trained to use the arrow keys for that box and most of my spreadsheet time is spent on Linux.
Comment 3 Cor Nouws 2014-09-16 08:56:48 UTC
Indeed. OK in 4.2, wrong in 4.3.0.0 alpha1
Comment 4 Matthew Francis 2014-12-10 07:38:23 UTC
Bibisect results from 43all:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3 a900e72b6357882284c5955bdf939bf14269f5fb ee1feb893a4fe94061927eb67f65f82d01e1d047
We cannot bisect more!

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [2e0fa432485d1db6abd355dad8ccb06f0b97e4fb] source-hash-ce90f99a2d66c2b998ad3f9f028e2ea623a757f5
git bisect start 'latest' 'last40onmaster'
# good: [4360256bc0b1443028a057164fbbdb43847ce68d] source-hash-40543e5321c8f618c125fd6f7f9a24b87431277a
git bisect good 4360256bc0b1443028a057164fbbdb43847ce68d
# good: [4360256bc0b1443028a057164fbbdb43847ce68d] source-hash-40543e5321c8f618c125fd6f7f9a24b87431277a
git bisect good 4360256bc0b1443028a057164fbbdb43847ce68d
# good: [55a9af1d3a70fcd72408c0d0fd7654b970366648] source-hash-c2485b4c38a574416dc3948fec85b0232109eb61
git bisect good 55a9af1d3a70fcd72408c0d0fd7654b970366648
# bad: [050f497672ebe66d585ca71db9ba29f4a5793172] source-hash-13d1a5667765731441e4a8ae1b43788fe8de5117
git bisect bad 050f497672ebe66d585ca71db9ba29f4a5793172
# skip: [3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3] source-hash-c59b3d6c5c8096486730007d9b9b053793b90b1e
git bisect skip 3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3
# good: [56a3b3c781fc2eb55f46641d89a866a91119a8a3] source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
git bisect good 56a3b3c781fc2eb55f46641d89a866a91119a8a3
# bad: [13f22e75712a128951aeed518ac4e60174c5ed69] source-hash-306859babd5a997a1e5d50e7791e8e5852a7ea2e
git bisect bad 13f22e75712a128951aeed518ac4e60174c5ed69
# bad: [4f705a8cfb1998b09f2062510b207d35a33647d8] source-hash-1eeb20f3958666ec6ba6e0fcf52e92e5eb447a14
git bisect bad 4f705a8cfb1998b09f2062510b207d35a33647d8
# good: [33ce87ec76b69b6a44704835916642ad3ad1539a] source-hash-2be3417bf6dba2a0897b21e15d22ef2f8aac99e3
git bisect good 33ce87ec76b69b6a44704835916642ad3ad1539a
# bad: [ee1feb893a4fe94061927eb67f65f82d01e1d047] source-hash-f3609ac092bc520825bfd6b71ed20ecaba293317
git bisect bad ee1feb893a4fe94061927eb67f65f82d01e1d047
# skip: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect skip a900e72b6357882284c5955bdf939bf14269f5fb
# only skipped commits left to test
# possible first bad commit: [ee1feb893a4fe94061927eb67f65f82d01e1d047] source-hash-f3609ac092bc520825bfd6b71ed20ecaba293317
# possible first bad commit: [3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3] source-hash-c59b3d6c5c8096486730007d9b9b053793b90b1e
# possible first bad commit: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
Comment 5 Matthew Francis 2014-12-31 04:31:41 UTC
The below commit seems to be where the behaviour changed.

commit ed6b8c9f8d1b932300ce16d6188d10036827f676
Author: Kohei Yoshida <kohei.yoshida@collabora.com>
Date:   Mon Mar 10 12:08:45 2014 -0400

    Select the whole text when the named range box gets focus.
    
    Not doing this had been bugging me for a long time since I use
    Shift-Ctrl-F5 to define named ranges a lot.  Small usability improvement.
    
    Change-Id: Ib1a4e4e26e15667598a603443dde05e08fdbe3b7
Comment 6 Commit Notification 2015-06-19 22:18:41 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ecef8cedb215e49237a11607197edc91639bfcd

tdf#83859: Make arrow keys work again in named ranges dropdown

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Katarina Behrens (Inactive) 2015-06-19 22:34:11 UTC
Hi folks, the above should be a fix for this issue.

It now works for me on Linux, it'd be nice if someone on Windows could test it works there as well
Comment 8 Buovjaga 2015-06-20 09:19:26 UTC
Works ok in Linux & Windows.

Note for reproducers: you first have to create the named ranges from Ctrl-F3.
"The name box" means the dropdown menu right above the A column.
You can also focus to it by Ctrl-Shift-F5.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_23:16:58
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-20_00:06:19
Locale: en-US (en_US.UTF-8)
Comment 9 Katarina Behrens (Inactive) 2015-06-20 11:22:02 UTC
Sure we can put the fix to 5.0 too, it is non-intrusive enough and will likely get a review
Comment 10 Cor Nouws 2015-06-22 10:57:18 UTC
Thanks for fixing :) !
Comment 11 Commit Notification 2015-06-28 01:57:04 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf985aa384e053bc829de4d2ff56ba22049297a8&h=libreoffice-5-0

tdf#83859: Make arrow keys work again in named ranges dropdown

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 08:35:15 UTC Comment hidden (obsolete)