tdf#83859: Make arrow keys work again in named ranges dropdown

Regression from ed6b8c9f8d1b93230 which slightly changed the logic
and set bHandled to true by default, thus effectively throwing all
key press events except for Enter and Esc away.

Set key press events (minus Enter & Esc) to bHandled = false and let
them fall through to be dealt with in the base class (ComboBox)

Change-Id: Ie1d857725a7de1d0bed1fd59df7eef5390ae5f3d